--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,100&display=swap");
+@import './styles/fonts.css'; /* Import your local .otf fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 * {
   margin: 0;
@@ -8,9 +9,7 @@
 }
 
 body {
-  font-family: "Lato", sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'TriumvirateCG', sans-serif;
   overflow-x: hidden;
   overscroll-behavior: none;
 }
@@ -18,6 +17,15 @@ body {
 html,
 body {
   scroll-behavior: smooth;
+}
+
+/* Tailwind override */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 @tailwind base;
